# WinDock

./: BackgroundSettingsDialog.h  BaseConstants.h  CMakeLists.txt  CalendarWidget.cpp  CalendarWidget.h  Dock.cpp  Dock.h  DockAnimationManager.cpp  DockAnimationManager.h  DockConstants.h  DockContextConstants.h  DockContextMenu.cpp  DockContextMenu.h  DockMenuAppManager.cpp  DockMenuAppManager.h  EmojiList.cpp  EmojiList.h  ExtensionLayoutManager.cpp  ExtensionLayoutManager.h  ExtensionManager.cpp  ExtensionManager.h  ExtensionsMenu.cpp  ExtensionsMenu.h  README.md  emoji_data.json  extensions.txt
EmojiCategories/: EmojiAnimals.h  EmojiFish.h  EmojiFood.h  EmojiHearts.h  EmojiObjects.h  EmojiSmileys.h  EmojiSports.h  EmojiTransport.h
Extensions/: AltTabOverlay.cpp  AltTabOverlay.h  AppVolumeWidget.cpp  AppVolumeWidget.h  ClipboardHistoryOverlay.cpp  ClipboardHistoryOverlay.h  ClipboardManager.cpp  ClipboardManager.h  ClipboardManagerWidget.cpp  ClipboardManagerWidget.h  ExplorerKiller.cpp  ExplorerKiller.h  ExtensionsInit.cpp  LangIndicatorExtension.cpp  LangIndicatorExtension.h  PigDockExtension.cpp  PigDockExtension.h  ProxyExtension.cpp  ProxyExtension.h  TimerExtension.cpp  TimerExtension.h  VolumeMixerWidget.cpp  VolumeMixerWidget.h  WeatherExtension.cpp  WeatherExtension.h  WinDockBar.cpp  WinDockBar.h  WinDockBarConstants.h  WinTabOverlay.cpp  WinTabOverlay.h  WindowArrangementExtension.cpp  WindowArrangementExtension.h
Search/: ApplicationSearcher.cpp  ApplicationSearcher.h  SearchResult.h  SearchWindow.cpp  SearchWindow.h
TXT/: apps.txt  blacklist.txt  blocked_tray_apps.txt  hidden_apps.txt  process_mapping.txt
Wallpaper/: CommonDefines.h  DesktopBackground.cpp  DesktopBackground.h  ImageRenderer.cpp  MediaRenderer.cpp  MultiDesktopManager.cpp  MultiDesktopManager.h  VideoRenderer.cpp  VideoRenderer.h
Wallpaper old/: ImageRenderer.h  MediaRenderer.h  ScreenSettings.h
